tests/main-test-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: istio-system-istio
    meta.helm.sh/release-namespace: istio-system
  name: main
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*.bigbang.dev'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wildcard-cert
      mode: SIMPLE
